# AudioFun

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fmodsound.cpp  fmodsound.h  native-lib.cpp
app/src/main/cpp/inc/: fmod_android.h
app/src/main/res/drawable/: ic_audio_oval_2bc329.xml  progress_bar_compose_voice.xml
app/src/main/res/layout/: activity_fmod.xml  (+6 more)
gradle/wrapper/: gradle-wrapper.properties
libsoundtouch/: CMakeLists.txt  build.gradle
libsoundtouch/src/androidTest/java/com/hugh/sound/: ExampleInstrumentedTest.java
libsoundtouch/src/main/: AndroidManifest.xml
libsoundtouch/src/main/cpp/: soundtouch-jni.cpp
libsoundtouch/src/main/cpp/SoundStretch/: Makefile.am  RunParameters.cpp  RunParameters.h  WavFile.cpp  WavFile.h  main.cpp  soundstretch.sln  soundstretch.vcxproj
libsoundtouch/src/main/cpp/SoundTouch/: InterpolateCubic.h  InterpolateLinear.h  InterpolateShannon.h  Makefile.am
libsoundtouch/src/main/cpp/SoundTouchDLL/: SoundTouchDLL.cpp  SoundTouchDLL.h  SoundTouchDLL.pas  SoundTouchDLL.rc  SoundTouchDLL.sln  SoundTouchDLL.vcxproj
libsoundtouch/src/main/cpp/SoundTouchDLL/DllTest/: DllTest.cpp  DllTest.vcxproj
libsoundtouch/src/main/java/com/hugh/sound/: ExampleActivity.java  SoundTouch.java  SoundTouchActivity.java  SoundTouchExActivity.java
libsoundtouch/src/main/java/com/hugh/sound/common/schedulers/: BaseSchedulerProvider.java  ImmediateSchedulerProvider.java  SchedulerProvider.java
libsoundtouch/src/main/java/com/hugh/sound/util/: AudioPlayerHelper.java  ContentUtil.java
libsoundtouch/src/main/res/layout/: activity_example.xml  activity_soundtouch.xml
libsoundtouch/src/test/java/com/hugh/sound/: ExampleUnitTest.java
libwebrtc/: CMakeLists.txt  build.gradle
libwebrtc/src/androidTest/java/com/hugh/libwebrtc/: ExampleInstrumentedTest.java
libwebrtc/src/main/: AndroidManifest.xml
libwebrtc/src/main/assets/record/: recorded_audio_44k.pcm  recorded_audio_fun.pcm  test_32k.pcm
libwebrtc/src/main/cpp/: CMakeLists.txt  _android_log_print.h  web_rtc.cpp
libwebrtc/src/main/cpp/legacy_agc/: CMakeLists.txt  agc-lib.cpp
libwebrtc/src/main/cpp/legacy_agc/common_audio/signal_processing/: resample_by_2.c
libwebrtc/src/main/cpp/legacy_agc/modules/audio_processing/agc/legacy/: analog_agc.h  digital_agc.c  digital_agc.h  gain_control.h
libwebrtc/src/main/cpp/legacy_agc/rtc_base/: checks.cc
libwebrtc/src/main/cpp/legacy_ns/: ns-lib.cpp
libwebrtc/src/main/cpp/legacy_ns/common_audio/signal_processing/: complex_fft.c  complex_fft_tables.h  cross_correlation.c  dot_product_with_scale.h  get_scaling_square.c  spl_init.c
libwebrtc/src/main/cpp/legacy_ns/modules/audio_processing/legacy_ns/: noise_suppression_x.c  ns_core.h  nsx_core.c  nsx_core.h  nsx_core_c.c  windows_private.h
libwebrtc/src/main/cpp/legacy_ns/rtc_base/numerics/: safe_conversions.h  safe_conversions_impl.h
libwebrtc/src/main/cpp/legacy_ns/system_wrappers/include/: cpu_features_wrapper.h
libwebrtc/src/main/cpp/ns/: checks.cc  checks.h  dot_product_with_scale.cc  fft4g.c  noise_suppression.c  noise_suppression.h  noise_suppression_x.c  ns_core.c  ns_core.h  safe_compare.h  safe_conversions.h  signal_processing_library.h  spl_inl.h  spl_sqrt_floor.c
libwebrtc/src/main/cpp/webrtc_agc/common_audio/signal_processing/: copy_set_operations.c  dot_product_with_scale.cc  spl_sqrt.c
libwebrtc/src/main/cpp/webrtc_agc/common_audio/signal_processing/include/: signal_processing_library.h  spl_inl.h
libwebrtc/src/main/cpp/webrtc_agc/modules/audio_processing/agc/legacy/: analog_agc.c
libwebrtc/src/main/cpp/webrtc_ns/: CMakeLists.txt  ns-lib.cpp
libwebrtc/src/main/cpp/webrtc_ns/common_audio/signal_processing/: complex_bit_reverse.c  division_operations.c  downsample_fast.c  energy.c  min_max_operations.c  real_fft.c  vector_scaling_operations.c
libwebrtc/src/main/cpp/webrtc_ns/modules/audio_processing/legacy_ns/: defines.h  noise_suppression.c  noise_suppression.h  noise_suppression_x.h  ns_core.c
libwebrtc/src/main/cpp/webrtc_ns/rtc_base/: checks.h  sanitizer.h
libwebrtc/src/main/java/com/hugh/libwebrtc/: AFRtcMainActivity.java  MP3lame.java  RtcActivity.java  WebRtcAGCUtils.java  WebRtcNsUtils.java  WebRtcUtils.java
libwebrtc/src/main/java/com/hugh/libwebrtc/commonaudio/: AudioCapturer.java  AudioPlayer.java  BufferSlice.java  TaskQuenu.java  Ticker.java
libwebrtc/src/main/java/com/hugh/libwebrtc/kt/: RtcFileActivity.kt
libwebrtc/src/main/java/com/hugh/libwebrtc/other/: AFRtcMainActivity.java  RtcFileActivity.kt
libwebrtc/src/main/res/layout/: module_rtc_activity_file.xml  module_rtc_activity_home.xml  module_rtc_activity_main.xml
libwebrtc/src/main/res/raw/: recorded_audio_16k.pcm  recorded_audio_32k.pcm  recorded_audio_8k.pcm
libwebrtc/src/test/java/com/hugh/libwebrtc/: ExampleUnitTest.java
(+32 files in other folders)
